# naivesocks

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  base64.c  base64.h  cipher.c  cipher.h  client.c  client.h  server.c  server.h  udprelay.c  udprelay.h
src/include/: cipher.h  client.h  securesocket.h  server.h
src/ns-client/: CMakeLists.txt  client.c
src/ns-server/: CMakeLists.txt  server.c
src/ns-utility/: CMakeLists.txt  cipher.c  getkey.c  securesocket.c
